# wifiparser

./: CMakeLists.txt  README.md
include/: custom.hpp  dbus_comutator.hpp  include.hpp  parsing_iwlib.hpp  parsing_libnl3.h  parsing_libnm.hpp
src/: main.cpp
